--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -45,6 +45,8 @@ jobs:
         CONFIG_FILE: "${{ github.event.inputs.config }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        sed -i '1i CONFIG_KERNEL_BUILD_USER="fxhack"' openwrt/.config
+        sed -i '1i CONFIG_GRUB_TITLE="OpenWrt by fxhack"' openwrt/.config
         chmod +x ./diy.sh && ./diy.sh
         cd openwrt && make defconfig
     - name: 下载配置文件源码
