--- a/xiaomi_mini.config
+++ b/xiaomi_mini.config
@@ -10,12 +10,13 @@ CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
-CONFIG_PACKAGE_chat=y
+# CONFIG_PACKAGE_coremark is not set
 # CONFIG_PACKAGE_etherwake is not set
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_ipv6helper=y
+# CONFIG_PACKAGE_iwinfo is not set
 CONFIG_PACKAGE_kmod-atm=y
 CONFIG_PACKAGE_kmod-chaoskey=y
 CONFIG_PACKAGE_kmod-fast-classifier=y
@@ -124,14 +125,27 @@ CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_p910nd=y
+# CONFIG_PACKAGE_ppp is not set
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_usb-modeswitch=y
 # CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vsftpd-alt is not set
 # CONFIG_PACKAGE_wol is not set
-CONFIG_PACKAGE_wwan=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
+CONFIG_PACKAGE_kmod-crypto-arc4=y
+CONFIG_PACKAGE_kmod-crypto-ecb=y
+CONFIG_PACKAGE_kmod-crypto-sha1=y
+CONFIG_PACKAGE_kmod-macvlan=y
+CONFIG_PACKAGE_kmod-mppe=y
+CONFIG_PACKAGE_kmod-ppp=y
+# CONFIG_PACKAGE_kmod-ppp-synctty is not set
+CONFIG_PACKAGE_kmod-pppoa=y
+CONFIG_PACKAGE_kmod-pppoe=y
+CONFIG_PACKAGE_kmod-pppol2tp=y
+CONFIG_PACKAGE_kmod-pppox=y
+CONFIG_PACKAGE_kmod-pptp=y
+CONFIG_PACKAGE_kmod-slhc=y
+CONFIG_PACKAGE_shellsync=y
