--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -32,8 +32,8 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
-        #sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
-        sed -i '11a src-git liuran001_packages https://github.com/fxhack/packages_openwrt' ./feeds.conf.default
+        sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
+        #sed -i '11a src-git liuran001_packages https://github.com/fxhack/packages_openwrt' ./feeds.conf.default
     - name: 更新官方及第三方源
       working-directory: ./openwrt
       run: |
